--- a/app/src/main/res/layout/fassade_2.xml
+++ b/app/src/main/res/layout/fassade_2.xml
@@ -16,14 +16,14 @@
 
         <!--Vertical  guidelines  -->
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X1"
+            android:id="@+id/guideline_X2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.37" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X3"
+            android:id="@+id/guideline_X1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -37,107 +37,105 @@
             app:layout_constraintGuide_percent="0.9" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X8"
+            android:id="@+id/guideline_X3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.63" />
+            app:layout_constraintGuide_percent="0.635" />
 
         <!-- horizontal guidelines  -->
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.82" />
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_Y2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.69" />
+            app:layout_constraintGuide_percent="0.815" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_Y3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.37" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y31"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.51" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y32"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.46" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y33"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.42" />
-
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.19" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.87" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.64" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.1" />
+            app:layout_constraintGuide_percent="0.7" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_Y8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.15" />
+            app:layout_constraintGuide_percent="0.37" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.52" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.46" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.43" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.19" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.875" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.64" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.1" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_Y11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.16" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_Y9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.24" />
+            app:layout_constraintGuide_percent="0.25" />
 
         <!-- Buttons-->
-        <!-- Buttons-->
-
         <Button
-            android:id="@+id/top_left1"
+            android:id="@+id/button1"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,0"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
-            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y11"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y12"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
@@ -146,100 +144,96 @@
 
 
         <Button
-            android:id="@+id/bottom_left1"
+            android:id="@+id/button2"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,2"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
-            app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y11"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y12"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@id/guideline_X1"
+            app:layout_constraintStart_toStartOf="@id/guideline_X3"
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/top_middle1"
+            android:id="@+id/button3"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,4"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
-            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
-            app:layout_constraintStart_toStartOf="@id/guideline_X3"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y9"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y10"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X3"
+            app:layout_constraintStart_toStartOf="@id/guideline_X2"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/top_middle2"
+            android:id="@+id/button4"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,5"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
-            app:layout_constraintStart_toStartOf="@id/guideline_X7"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
-            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
+            app:layout_constraintStart_toStartOf="@id/guideline_X1"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y7"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y8"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/bottom_middle1"
+            android:id="@+id/button5"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,6"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
-            app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y5"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y6"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X3"
+            app:layout_constraintStart_toStartOf="@id/guideline_X2"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
+        <Button
+            android:id="@+id/button6"
+            style="@style/windowbutton_style"
+            android:tag="jazz_riff.sf2,7"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y7"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y8"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/bottom_middle2"
-            style="@style/windowbutton_style"
-            android:tag="jazz_riff.sf2,7"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
-            app:layout_constraintStart_toStartOf="@id/guideline_X7"
-            app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/top_right1"
+            android:id="@+id/button7"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,8"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X10"
-            app:layout_constraintStart_toStartOf="@id/guideline_X9"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
-            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
+            app:layout_constraintStart_toStartOf="@id/guideline_X1"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y3"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y4"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/top_right2"
+            android:id="@+id/button8"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,9"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X12"
-            app:layout_constraintStart_toStartOf="@id/guideline_X11"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
-            app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
+            app:layout_constraintStart_toStartOf="@id/guideline_X3"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y3"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y4"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/bottom_right1"
+            android:id="@+id/button9"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,10"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X10"
-            app:layout_constraintStart_toStartOf="@id/guideline_X9"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
-            app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
+            app:layout_constraintStart_toStartOf="@id/guideline_X1"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y1"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y2"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/bottom_right2"
+            android:id="@+id/button10"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,11"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X12"
-            app:layout_constraintStart_toStartOf="@id/guideline_X11"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
-            app:layout_constraintTop_toTopOf="@id/guideline_CR_Y2"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
+            app:layout_constraintStart_toStartOf="@id/guideline_X3"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_Y1"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y2"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-
-
 
 
         <ImageButton
