--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -179,7 +179,7 @@
         <!-- Buttons-->
 
         <Button
-            android:id="@+id/top_left1"
+            android:id="@+id/button1"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,0"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
@@ -192,7 +192,7 @@
 
 
         <Button
-            android:id="@+id/bottom_left1"
+            android:id="@+id/button2"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,2"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
@@ -204,7 +204,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/top_middle1"
+            android:id="@+id/button3"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,4"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
@@ -214,7 +214,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/top_middle2"
+            android:id="@+id/button4"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,5"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
@@ -224,7 +224,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/bottom_middle1"
+            android:id="@+id/button5"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,6"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
@@ -235,7 +235,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/bottom_middle2"
+            android:id="@+id/button6"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,7"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
@@ -245,7 +245,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/top_right1"
+            android:id="@+id/button7"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,8"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
@@ -255,7 +255,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/top_right2"
+            android:id="@+id/button8"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,9"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
@@ -265,7 +265,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/bottom_right1"
+            android:id="@+id/button9"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,10"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
@@ -275,7 +275,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/bottom_right2"
+            android:id="@+id/button10"
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,11"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
